nodejs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
        - name: node-container
          image: node:18-alpine
          command: ["node", "-e", "require('http').createServer((r,s)=>s.end('Hello NodeJS')).listen(8080)"]
          ports:
            - containerPort: 8080
