nodejs-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-pod
  labels:
    app: nodejs
spec:
  containers:
    - name: nodejs-container
      image: node:18-alpine
      command: ["node", "-e", "require('http').createServer((r,s)=>s.end('Hello from Node')).listen(8080)"]
      ports:
        - containerPort: 8080
