prometheus-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus-pod
  labels:
    app: prometheus
spec:
  containers:
    - name: prometheus-container
      image: prom/prometheus:latest
      ports:
        - containerPort: 9000
